# TradeupSPY

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  build_prices_by_wear.py  comando.md  comandos.txt  cs2_prices_by_wear.csv  fix_grados.py  ok_pending_csfloat.txt  prompt.md  pyproject.toml  requirements.txt  scan_results.csv
OK/: contract__rand__0000008.csv  contract__rand__0000053.csv  contract__rand__0000059.csv  contract__rand__0000061.csv  contract__rand__0000119.csv  contract__rand__0000121.csv  contract__rand__0000134.csv  contract__rand__0000144.csv  contract__rand__0000147.csv  contract__rand__0000159.csv  contract__rand__0000175.csv  contract__rand__0000243.csv  contract__rand__0000275.csv  contract__rand__0000296.csv  contract__rand__0000309.csv  contract__rand__0000315.csv  contract__rand__0000319.csv  contract__rand__0000348.csv  contract__rand__0000355.csv  contract__rand__0000375.csv  contract__rand__0000382.csv  contract__rand__0000426.csv  contract__rand__0000430.csv  contract__rand__0000447.csv  contract__rand__0000464.csv  contract__rand__0000478.csv  contract__rand__0000479.csv  contract__rand__0000484.csv  contract__rand__0000568.csv  contract__rand__0000630.csv  contract__rand__0000681.csv  contract__rand__0000689.csv  contract__rand__0000689_2.csv  contract__rand__0000708.csv  contract__rand__0000744.csv  contract__rand__0000819.csv  contract__rand__0000838.csv  contract__rand__0000852.csv  contract__rand__0000890.csv  contract__rand__0000932.csv  (+68 more)
contracts/: contrato_osiris_supernova.csv  (+1 more)
data/: falta.txt  (+5 more)
(+12621 files in other folders)
