[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs2-local-prices"
version = "0.1.0"
description = "Local price builder for CS2 skins using CSFloat (offline evaluator support)"
readme = "README.md"
authors = [
  { name = "Falopp Team" },
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "tenacity>=9.0.0",
  "pydantic>=2.6.0",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.5",
  "black>=24.4.2",
  "pre-commit>=3.7.0",
]

[project.scripts]
cs2prices = "cs2_local_prices.cli:app"

[tool.setuptools]
packages = [
  "cs2_local_prices",
]

[tool.setuptools.package-dir]
cs2_local_prices = "cs2_local_prices"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "8.2"
addopts = "-ra -q --cov=cs2_local_prices --cov-report=term-missing --cov-fail-under=80"
testpaths = [
    "tests",
]
